--- a/www/templates/nav.html
+++ b/www/templates/nav.html
@@ -19,13 +19,13 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/trader">Profile</a></li>
-                                <li><a href="/trader/listings">Recent Listings</a></li>
                                 {% if trader_posts %}
                                     <li class="divider"></li>
                                     <li class="nav-header">Recent Posts</li>
                                     {% for post in trader_posts|slice:":5" %}
                                         <li><a href="/post?postID={{ post.postID }}">{{ post.title }}</a></li>
                                     {% endfor %}
+                                    <li><a href="/trader/posts">All Posts...</a></li>
                                 {% endif %}
                             </ul>
                         </li>
