--- a/www/templates/trader.html
+++ b/www/templates/trader.html
@@ -1,34 +1,27 @@
 {% extends "footer.html" %}
 
 {% block content_container %}
-    <div class="hero-unit">
-        <form action="/trader?trader={{ user_id }}" method="post">
-            <div>
-                <ul>
-                    <li>
-                        <h1>{{ nickname }}</h1>
-                    </li>
-                    <li>
-                        <h6>{{ user_id }} from {{ user_fid }} via {{ user_prov }}</h6>
-                    </li>
-                    <hr/>
-                    <li>
-                        <input type="submit" value="Post Listing" class="btn btn-primary btn-large">
-                    </li>
-                </ul>
-            </div>
-        </form>
+    <div class="row">
+        <div class="span12">
+            <h1>{{ nickname }}</h1>
+            <h6>{{ user_id }} from {{ user_fid }} via {{ user_prov }}</h6>
+        </div>
     </div>
-    <div>
-        <ul>
-            <li>Recent Posts</li>
+   
+    <div class="row">
+        <div class="span6">
+            <h2>Recent Posts</h2>
             {% for post in trader_posts %}
-            <li><a href="/post?postID={{ post.postID }}">{{ post.title }}</a></li>
+                <li><a href="/post?postID={{ post.postID }}">{{ post.title }}</a></li>
             {% endfor %}
-        </ul>
+            {% if trader_posts|length < 1 %}
+                <h4>No posts yet!</h4>
+            {% endif %}
+        </div>
+        <div class="span6">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+       </div>
     </div>
-
-
-
-
 {% endblock content_container %}
