Added the email sending functionality to a form on the bottom of the post page.  I have to clarify how much email processing Dean wants the apllication to do, but this works (I think, I have to test if it ACTUALLY works on GAE, but it appears to work in dev).  I have set up an XML file for email text and the basic structure of how to read it can be copied again in the cod if needed.  I realised today that i need a better way to deal with the template_values because so many of them end up being global, but, another day.

--- a/www/templates/post.html
+++ b/www/templates/post.html
@@ -1,6 +1,7 @@
 {% extends "footer.html" %}
 
 {% block content_container %}
+    {% block status_message %}{% endblock status_message %}
     <div class="hero-unit">
         <h1> {{ postID }} </h1>
         {% for listing in listings %}
@@ -14,6 +15,31 @@
             {% endif %}
             <p>{{ listing.engage }}</p>
             <blockquote>{{ listing.price }}</blockquote>
+            </div>
+            <div class="row">
+                <div class="span12">
+                    <form action="/post" method="post">
+                        <ul>
+                            <li>
+                                <label for="sender_name">Name</label>
+                                <input type="text" name="sender_name" placeholder="Your Name">
+                            </li>
+                            <li>
+                                <label for="sender_email">Email</label>
+                                <input type="email" name="sender_email" default="Digital" required>
+                            </li>
+                            <li>
+                                <label for="sender_message">Message to Trader:</label>
+                                <textarea name="sender_message" rows="10" cols="240" required></textarea>
+                            </li>
+                            <li>
+                                <input type="hidden" name="postID" value="{{ postID }}">
+                                <input type="submit" value="Send Email" class="btn btn-primary btn-large">
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+            </div>
         {% endfor %}
-
+    
 {% endblock content_container %}
