--- a/www/templates/trader_posts.html
+++ b/www/templates/trader_posts.html
@@ -2,11 +2,17 @@
 
 {% block content_container %}
     <div class="row">
-        <div class="span12">
-            {% for post in posts %}
-                <a href="/post?postID={{ post.postID }}">{{ post.title }}</a>
-            {% endfor %}
+        {% for post in posts %}
+        <div class="span12 single-post">
+            <a href="/post?postID={{ post.postID }}">
+                <h2>{{ post.title }}</h2>
+            </a>
+            <h3>{{ post.category }}</h3>
+            <h4>{{ post.subcategory }}</h4>
+            <h5>{{ post.price }}</h5>
+            <p>{{ post.content }}</p>
         </div>
+        {% endfor %}    
     </div>
 <div class="row">
         <div class="span12">
