--- a/www/templates/trader.html
+++ b/www/templates/trader.html
@@ -4,17 +4,20 @@
     <div class="row">
         <div class="span12">
             <h1>{{ nickname }}</h1>
-            <h6>{{ user_id }} from {{ user_fid }} via {{ user_prov }}</h6>
+            <h6>UserID: {{ user_id }}</h6>
         </div>
     </div>
    
     <div class="row">
         <div class="span6">
             <h2>Recent Posts</h2>
-            {% for post in trader_posts %}
-                <li><a href="/post?postID={{ post.postID }}">{{ post.title }}</a></li>
+            {% for post in gvalues.trader_posts %}
+                <div class="single-post">
+                    <a href="/post?postID={{ post.postID }}"><h2>{{ post.title }}</h2></a>
+                    <h5>{{ post.price }}</h5>
+                </div>
             {% endfor %}
-            {% if trader_posts|length < 1 %}
+            {% if gvalues.trader_posts|length < 1 %}
                 <h4>No posts yet!</h4>
             {% endif %}
         </div>
