had to make some changes as I was not using the GAE datastore's key properly, as I thouhgt I didn't need it, but I do, so I set that up, and made some changes to other parts of the code to reflect that (I think it should result in less queries).

--- a/www/templates/post.html
+++ b/www/templates/post.html
@@ -3,7 +3,6 @@
 {% block content_container %}
     {% block status_message %}{% endblock status_message %}
     <div class="row">
-        {% for listing in listings %}
         <div class="span7 single-post">
             <h2><a href="/post?postID={{ listing.postID }}">{{ listing.title }}</a></h2>
             <h5>{{ listing.price }}</h5>
@@ -15,10 +14,10 @@
             <h5>{{ post.price }}</h5>
             {% else %}
                 <b>The post you have requested does not currently exist.</b>
+                <p>{{ listing }}</p>
+                <p>{{ postID }}</p>
             {% endif %}
-            
         </div>
-        {% endfor %}
         <div class="span3">
             <form action="/post" method="post">
                 <ul>
