tweaked some of the email-related bits that I couldn't check until the site was uploaded to GAE.

--- a/www/templates/post.html
+++ b/www/templates/post.html
@@ -17,7 +17,7 @@
             {% endif %}
         </div>
         <div class="span3">
-            <form action="/post" method="post">
+            <form action="/post?postID={{ listing.postID }}" method="post">
                 <ul>
                     <li>
                         <label for="sender_name">Name</label>
