fixed GAE's ability to find my favicon, changed the layout of the trader/posts page, the main page (woo categories) and the post summaries all over (now in small_post.html for the most part).  I have started to implement the category section (for browsing the database) but thought I'd throw a commit in before I really started to screw around with things.

--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,32 +1,47 @@
 {% extends "footer.html" %}
 
 {% block content_container %}
-    <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-    </div>
-
-    <!-- Example row of columns -->
     <div class="row">
         <div class="span6">
-            <h2>Recent Posts</h2>
-            {% for listing in listings %}
-                <b><a href="/post?postID={{ listing.postID }}">{{ listing.title }}</a></b>
-                {% if listing.content %}
-                    <p>{{ listing.content }}</p>
-                {% else %}
-                    <b>No Content, No Post</b>
-                {% endif %}
-                <p>{{ listing.engage }}</p>
-                <blockquote>{{ listing.price }}</blockquote>
-            {% endfor %}
+            {% if listings.buyer %}
+                <h2>Looking To Buy</h2>
+                {% for post_listing in listings.buyer %}
+                    {% with post_listing as listing %}
+                        {% include "small_post.html" %}
+                    {% endwith %}
+                {% endfor %}
+            {% endif %}
         </div>
         <div class="span6">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
+            {% if listings.seller %}
+                <h2>Looking To Sell</h2>
+                {% for post_listing in listings.seller %}
+                    {% with post_listing as listing %}
+                        {% include "small_post.html" %}
+                    {% endwith %}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="span6">
+            {% if listings.employer %}
+                <h2>Looking To Hire</h2>
+                {% for post_listing in listings.employer %}
+                    {% with post_listing as listing %}
+                        {% include "small_post.html" %}
+                    {% endwith %}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="span6">
+            {% if listings.employee %}
+                <h2>Looking To Work</h2>
+                {% for post_listing in listings.employee %}
+                    {% with post_listing as listing %}
+                        {% include "small_post.html" %}
+                    {% endwith %}
+                {% endfor %}
+            {% endif %}
+        </div>
     </div>
 {% endblock content_container %}
 
