--- a/www/templates/post.html
+++ b/www/templates/post.html
@@ -10,7 +10,7 @@
                 {{ listing.contact }}
             </a>
             {% if listing.content %}
-                <p>{{ listing.content }}</p>
+                <pre>{{ listing.content }}</pre>
             <h5>{{ post.price }}</h5>
             {% else %}
                 <b>The post you have requested does not currently exist.</b>
