--- a/www/css/main.css
+++ b/www/css/main.css
@@ -24,6 +24,16 @@ form ul li {
 
 .single-post h5{
     float:right;
+    margin:0;
+}
+
+.single-post .bottom-bar{
+    border-top: dotted black 1px;
+    font-family: monospace;
+}
+
+.bottom-bar .date{
+    float:right;
 }
 
 
