I added a bunch of comments, moved a few minor things to the settings.py file, and a few minor tweaks to things.

--- a/www/templates/nav.html
+++ b/www/templates/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand active" href="/">Bitcoin List</a>
+            <a class="brand" href="/">Bitcoin List</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a href="/">Home</a></li>
