--- a/www/templates/small_post.html
+++ b/www/templates/small_post.html
@@ -1,6 +1,6 @@
 <div class="single-post">
     <h4><a href="/post?postID={{ listing.postID }}">{{ listing.title }}</a></h4>
-    <h5>{{ listing.price }}</h5>
+    <h5>{{ listing.price|floatformat:3 }} BTC</h5>
     <div class="bottom-bar">
         <span class="subcategory">{{ listing.subcategory }}</span>
         <span class="date">Posted {{ listing.engage|timesince:date }} ago</span>
